--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # ignore all vscode workspace files
 *.code-workspace
 node_modules
+.DS_Store
+.idea
 
 # ignore Auto-generated Gatsby files
 .cache
