--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Code The Change YYC",
+  "name": "code-the-change-yyc",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
