Adds custom modals with react-modal,Changes to CSS

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gatsby-source-filesystem": "^2.3.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-modal": "^3.11.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
