--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.22.15",
+    "gatsby-cli": "^2.12.60",
     "gatsby-plugin-react-helmet": "^3.3.3",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-remark": "^2.8.20",
