--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "formik": "^2.1.5",
     "gatsby": "^2.22.15",
     "gatsby-plugin-react-helmet": "^3.3.3",
     "gatsby-source-filesystem": "^2.3.14",
