--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "formik": "^2.1.5",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-plugin-react-helmet": "^3.3.3",
-    "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-remark": "^2.8.20",
+    "gatsby-source-prismic": "^3.2.1",
     "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
