--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-plugin-react-helmet": "^3.3.3",
-    "gatsby-source-prismic": "^3.2.1",
+    "gatsby-source-contentful": "^2.3.33",
     "moment": "^2.27.0",
     "react": "^16.12.0",
+    "react-collapsible": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-modal": "^3.11.2"
