--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
+    "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.3.3",
     "gatsby-source-contentful": "^2.3.33",
     "moment": "^2.27.0",
