--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "gatsby": "^2.22.15",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-offline": "^3.2.23",
     "gatsby-plugin-react-helmet": "^3.3.3",
     "gatsby-source-contentful": "^2.3.33",
     "moment": "^2.27.0",
@@ -30,6 +29,7 @@
     "react-modal": "^3.11.2"
   },
   "devDependencies": {
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "prettier": "2.0.5"
   },
   "repository": {
