--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "develop": "gatsby clean && gatsby develop -S",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "yarn run develop",
-    "serve": "gatsby serve",
+    "serve": "yarn build && gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
@@ -17,10 +17,15 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-sharp": "^2.6.27",
+    "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-source-contentful": "^2.3.33",
+    "gsap": "^3.5.0",
     "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-collapsible": "^2.8.0",
