--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@popperjs/core": "^2.6.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
@@ -40,12 +41,12 @@
     "react-modal": "^3.11.2"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "prettier": "2.2.1"
   },
