--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-source-contentful": "^4.3.0",
     "gsap": "^3.5.0",
     "jquery": "^3.5.1",
+    "magnific-popup": "^1.1.0",
     "moment": "^2.27.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
@@ -37,8 +38,7 @@
     "react-bootstrap": "^1.4.0",
     "react-collapsible": "^2.8.0",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.0.0",
-    "react-modal": "^3.11.2"
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
