--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "jsx-quotes": ["error", "prefer-single"],
     "operator-linebreak": "off",
     "arrow-parens": "off",
-    "arrow-body-style": "off"
+    "arrow-body-style": "off",
+    "comma-dangle": "off"
   }
 }
